<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/currentIngredients"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_horizontal"
                android:hint="@string/hint_recipe_name"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:textAppearance="@style/TextTitle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/title_ingredients"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="onClickAddItems"
                android:text="@string/button_add_items" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/title_instructions"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <EditText
                android:id="@+id/edit_text_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_instructions"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_create_recipe"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:enabled="false"
        android:onClick="onClickCreateRecipe"
        android:text="@string/button_create_recipe" />

</LinearLayout>