<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddItemsActivity">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:iconifiedByDefault="false"
        app:queryHint="@string/hint_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_search_suggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eee" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title_items"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:visibility="gone"
        tools:ignore="NestedWeights" />

    <TextView
        android:id="@+id/text_default_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text_default_items" />

    <Button
        android:id="@+id/button_add_items"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="0"
        android:enabled="false"
        android:onClick="onClickAddItems"
        android:text="@string/button_add_items" />

</LinearLayout>